tests/Fixtures/ShouldFail/Uno.MissingStyles/MainPage.xaml.cs
namespace Uno.MissingStyles;

public sealed partial class MainPage
{
    public MainPage()
    {
        // Empty - just a placeholder for XAML code-behind
    }
}
